aws_cloudfromation/cloudformation.yml
Resources:
    Ec2Instance:
        Type: AWS::EC2::Instance
        Properties:
          SecurityGroups:
            - !Ref InstanceSecurityGroup
          KeyName: hello2
          ImageId: ami-0e2ff28bfb72a4e45
          InstanceType: t2.micro
          AvailabilityZone: us-east-1c
          IamInstanceProfile:
            - !Ref RootRole
          UserData: !Base64 |
            #!/bin/bash
            yum update -y
            yum install httpd -y
            service httpd start
            chkconfig httpd on
            cd /var/www/html
            echo "<html><h1>Machiene launched in virginia using cloud formation</h1></html>" > index.html
    InstanceSecurityGroup:
        Type: 'AWS::EC2::SecurityGroup'
        Properties:
          GroupDescription: Enable SSH access via port 22
          SecurityGroupIngress:
            - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: 0.0.0.0/0
            - IpProtocol: tcp
              FromPort: '80'
              ToPort: '80'
              CidrIp: 0.0.0.0/0

    RootRole:
      Type: 'AWS::IAM::Role'
      Properties:
        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Principal:
                Service:
                  - ec2.amazonaws.com
              Action:
                  - 'sts:AssumeRole'
        path: /
        Policies:
          - PolicyName: root
            PolicyDocument:
              Version: 2012-10-17
              Statement:
                - Effect: Allow
                  Action: '*'
                  Resource: '*'
